# training_serving_basic

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py
.dvc/: config
app/: Dockerfile  main.py  minio_access.py  model_management.py  models.py  pyproject.toml  utils.py
app/data-management/: data-download.py  data-prepare.py
kube-configs/: minio.yaml
tests/: testing.py
