[tool.poetry]
name = "mlopshw"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
fastapi = "^0.104.1"
mlflow = "^2.8.0"
scikit-learn = "^1.3.2"
uvicorn = "^0.24.0"
minio = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
