[tool.poetry]
name = "mlopshw"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <4.0.0"
fastapi = "^0.104.1"
mlflow = "^2.8.0"
scikit-learn = "^1.3.2"
uvicorn = "^0.24.0"
minio = "^7.2.0"
boto3 = ">=1.26.76,<1.26.77"
psycopg2-binary = "^2.9.9"
dvc = {extras = ["s3"], version = "^3.36.1"}
pytest = "^7.4.3"
pytest-mock = "^3.12.0"
pylint = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
